--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
 	</section>
 
 	<footer>
-		<p>Acme web Design, copyright &copy; 2019
+		<p>Acme Designs, copyright &copy; 2019
 	</footer>
 </body>
 </html>
