--- a/services.html
+++ b/services.html
@@ -84,7 +84,7 @@
 	</section>
 
 	<footer>
-		<p>Acme web Design, copyright &copy; 2019
+		<p>Acme Designs, copyright &copy; 2019
 	</footer>
 </body>
 </html>
